--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <!-- custom css -->
     <link rel="stylesheet" href="css/custom.css">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;0,500;0,700;0,800;0,900;1,400&display=swap" rel="stylesheet">
 
     <!-- custom css ends -->
 
@@ -45,7 +46,7 @@
                 <p>Welcome to AlphaDevs</p>
             </div>
             <div class="right-topbar">
-                <a class="topbar-link" href="#"><i class="fa fa-envelope"></i>
+                <a class="topbar-link" href="mailto:alphadevs.info@gmail.com"><i class="fa fa-envelope"></i>
                     info@alphadevs.tech</a>
 
                 <a class="topbar-link" href="../whmcs/clientarea.php.html"><i class="fa fa-user"></i> My
@@ -127,6 +128,10 @@
                     </li>
                     <li>
                         <a href="aboutus.html" class="dropdown-toggle" data-toggle="dropdown">About Us</a>
+
+                    </li>
+                    <li>
+                        <a href="contactus.html" class="dropdown-toggle" data-toggle="dropdown">Contact Us</a>
 
                     </li>
 
@@ -696,99 +701,57 @@
 
 
     <!-- Testimonials slider -->
-    <section class="testimonials lighter-bg" id="carousel">
+    <section class="testimonials " id="carousel" style="background-color: #19233f;">
         <div class="custom-width">
             <div class="row">
-                <div class="col-md-12">
+                <div class="main-title text-center">
+                    <h3>Testimonials</h3>
+                    <h2>What some of our Amazing Clients say</h2>
+        
+                </div>
+                <div class="col-md-8 col-md-offset-2">
                     <div class="carousel slide" id="fade-quote-carousel" data-ride="carousel" data-interval="4000">
                         <ol class="carousel-indicators">
                             <li data-target="#fade-quote-carousel" data-slide-to="0" class="active"></li>
                             <li data-target="#fade-quote-carousel" data-slide-to="1"></li>
+                            <li data-target="#fade-quote-carousel" data-slide-to="2"></li>
                         </ol>
                         <div class="carousel-inner">
-                            <div class="item active">
-                                <div class="col-sm-4">
-                                    <div class="text-left">
-                                        <h2>What our clients are saying?</h2>
-                                        <p>It is a long established fact that a reader will be distracted by the
-                                            readable content of a page
-                                            when looking at its layout. </p>
-                                        <div class="buttons">
-                                            <a href="#" class="btn btn-small btn-green">Check out all
-                                                reviews <i class="fas fa-long-arrow-alt-right"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="profile-circle"><img src="images/other/testimonial1.jpg"
-                                            class="img-responsive" alt="">
-                                    </div>
-                                    <blockquote>
-                                        <p><i class="fa quote fa-quote-right fa-sm pull-left"></i>
-                                            <br>
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis
-                                            nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos
-                                            eaque
-                                            molestias.<i class="fa quote fa-quote-right fa-sm "></i></p>
-                                        <small>www.domainname.com</small>
-                                    </blockquote>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="profile-circle"><img src="images/other/testimonial2.jpg"
-                                            class="img-responsive" alt="">
-                                    </div>
-                                    <blockquote>
-                                        <p><i class="fa quote fa-quote-right fa-sm pull-left"></i>
-                                            <br>
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis
-                                            nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos
-                                            eaque
-                                            molestias.<i class="fa quote fa-quote-right fa-sm "></i></p>
-                                        <small>www.domainname.com</small>
-                                    </blockquote>
-                                </div>
+                            <div class="item">
+                                <div class="profile-circle"><img src="images/other/testimonial1.jpg" class="img-responsive"
+                                        alt=""></div>
+                                <blockquote>
+                                    <p><i class="fa quote fa-quote-right fa-sm pull-left"></i><br>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis
+                                        nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos eaque
+                                        molestias odio aut eius animi. Impedit temporibus nisi accusamus. <i class="fa quote fa-quote-right fa-sm"></i></p>
+                                    <small>www.domainname.com</small>
+                                </blockquote>
                             </div>
                             <div class="item">
-                                <div class="col-sm-4">
-                                    <div class="text-left">
-                                        <h2>What our clients are saying?</h2>
-                                        <p>It is a long established fact that a reader will be distracted by the
-                                            readable content of a page
-                                            when looking at its layout. </p>
-                                        <div class="buttons">
-                                            <a href="#" class="btn btn-small btn-green">Check out all
-                                                reviews <i class="fas fa-long-arrow-alt-right"></i></a>
-                                        </div>
-                                    </div>
+                                <div class="profile-circle"><img src="images/other/testimonial2.jpg" class="img-responsive"
+                                        alt="">
                                 </div>
-                                <div class="col-sm-4">
-                                    <div class="profile-circle"><img src="images/other/testimonial1.jpg"
-                                            class="img-responsive" alt="">
-                                    </div>
-                                    <blockquote>
-                                        <p><i class="fa quote fa-quote-right fa-sm pull-left"></i>
-                                            <br>
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis
-                                            nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos
-                                            eaque
-                                            molestias.<i class="fa quote fa-quote-right fa-sm "></i></p>
-                                        <small>www.domainname.com</small>
-                                    </blockquote>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="profile-circle"><img src="images/other/testimonial2.jpg"
-                                            class="img-responsive" alt="">
-                                    </div>
-                                    <blockquote>
-                                        <p><i class="fa quote fa-quote-right fa-sm pull-left"></i>
-                                            <br>
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis
-                                            nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos
-                                            eaque
-                                            molestias.<i class="fa quote fa-quote-right fa-sm "></i></p>
-                                        <small>www.domainname.com</small>
-                                    </blockquote>
-                                </div>
+                                <blockquote>
+                                    <p><i class="fa quote fa-quote-right fa-sm pull-left"></i>
+                                        <br>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis
+                                        nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos eaque
+                                        molestias odio aut eius animi. Impedit temporibus nisi accusamus. <i class="fa quote fa-quote-right fa-sm "></i></p>
+                                    <small>www.domainname.com</small>
+                                </blockquote>
+                            </div>
+                            <div class="active item">
+                                <div class="profile-circle"><img src="images/other/testimonial1.jpg" class="img-responsive"
+                                        alt=""></div>
+                                <blockquote>
+                                    <p><i class="fa quote fa-quote-right fa-sm pull-left"></i>
+                                        <br>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis
+                                        nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos eaque
+                                        molestias odio aut eius animi. Impedit temporibus nisi accusamus. <i class="fa quote fa-quote-right fa-sm "></i></p>
+                                    <small>www.domainname.com</small>
+                                </blockquote>
                             </div>
                         </div>
                     </div>
@@ -797,7 +760,6 @@
         </div>
     </section>
     <!--  Testimonials slider ends here -->
-
 
     <!-- Call to action -->
     <!-- <div class="call-to-action cta-green">
@@ -890,7 +852,7 @@
                     <p class="copyright">Copyright ©
                         <script>
                             document.write(new Date().getFullYear());
-                        </script>2020 All rights reserved | Developed by Alpha Devs <img
+                        </script> All rights reserved | Developed by Alpha Devs <img
                             src="images/logo/shadow-alpha.png" alt=""
                             style="width: 25px;height: 35px;margin-left: 10px;"></p>
                 </div>
