--- a/aboutus.html
+++ b/aboutus.html
@@ -111,6 +111,10 @@
                         <a href="contactus.html" class="dropdown-toggle" data-toggle="dropdown">Contact Us</a>
 
                     </li>
+                    <li>
+                        <a href="community.html" class="dropdown-toggle" data-toggle="dropdown">Community</a>
+
+                    </li>
 
 
                     <!-- <li class="dropdown">
