--- a/ourwork.html
+++ b/ourwork.html
@@ -111,6 +111,10 @@
 
                     </li>
                  
+                    <li>
+                        <a href="community.html" class="dropdown-toggle" data-toggle="dropdown">Community</a>
+
+                    </li>
                  
                     <!-- <li class="dropdown">
                         <a href="#" class="dropdown-toggle active" data-toggle="dropdown">Pages</a>
